test final do site

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           
             <div>
             <figure>
-              <img class="avatar" src="css/img/_20200313_235025.jpg" alt="Larissa"  width="430px" height="340px">
+              <img class="avatar" src="img/_20200313_235025.jpg" alt="Larissa"  width="430px" height="340px">
            </figure>
             <p>
               Oi! Meu nome é Larissa tenho 18 anos e sou apaixonada por tecnologia desde cedo.
