--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
            </figure>
             <p>
               Oi! Meu nome é Larissa tenho 18 anos e sou apaixonada por tecnologia desde cedo.
-              No ínicio de 2020 comecei meus estudos e especialização 
+              No início de 2020 comecei meus estudos e especialização 
               em tudo que tivesse haver com tecnologia e etc.
             </p>
             <p>
