commit index changes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>
               Oi! Meu nome é Larissa tenho 18 anos e sou apaixonada por tecnologia desde cedo.
               No início de 2020 comecei meus estudos e especialização 
-              em tudo que tivesse haver com tecnologia e etc.
+              em tudo que tivesse a ver com tecnologia e etc.
             </p>
             <p>
               Atualmente sou estudante da Alura e da Digital Innovation One,
