new index commit

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <h2>Contato</h2>
 
               <div class="grid icons">
-                <a target="_blank" href="https://github.com/larissa-FVp" >
+                <a target="_blank" href="https://github.com/larissa-FV" >
                   <i class="fab fa-github"></i>   
                 </a>
                 <a target="_blank" href="https://www.instagram.com/larissafv_/" >
