--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="titulo">
           <h1 class="site-title">Larissa Ferreira</h1>
-          <h3 class="site-subtitle">front-end student</h3>
+          <h3 class="site-subtitle">dev student</h3>
         </div>  
     </header>    
 
@@ -43,9 +43,7 @@
               em tudo que tivesse a ver com tecnologia e etc.
             </p>
             <p>
-              Atualmente sou estudante da Alura e da Digital Innovation One,
-              procuro me aprimorar cada dia mais em Front-end 
-              e no ano seguinte (2021) pretendo iniciar uma graduação em Gestão em TI. 
+
             </p>
             <p>
             Este site foi desenvolvido durante a <a href="https://www.alura.com.br/imersao-css">Imersão CSS da Alura</a>
