commit update in

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <a target="_blank" href="https://www.instagram.com/larissafv_/" >
                   <i class="fab fa-instagram"></i>
                 </a>
-                <a target="_blank" href="https://www.linkedin.com/in/larissa-ferreira-ver%C3%ADssimo-34631b1a7/" >
+                <a target="_blank" href="www.linkedin.com/in/larissafv-" >
                   <i class="fab fa-linkedin"></i>
                 </a>
 
