--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
          
           <div class="grid-container">
           
-              <p>Com um conhecimento básico de front end, uma grande paixão por back end. 
+              <p>Com um conhecimento básico de front end e uma grande paixão por back end. 
                 Procuro a cada dia me aperfeiçoar mais na área de desenvolvimento. 
-                Vivência com PostgresQL, Java, Lógica da programação, Arquitetura de Sistema
-                 e uma pequena experiência em Jupyter Notebook. 
+                Vivência com PostgreSQL, Java, Lógica da programação, Arquitetura de Sistema
+                 e uma pequena experiência com Jupyter Notebook. 
 
               </p>
             </div>
