--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <p>
                
             Minha paixão começou naquela época em que a internet vinha em um pen drive. Eu achava incrível ter que configurar a rede para usar. 
-            Antes disso, eu tinha um computador crt, gostava tanto dele, mesmo ele só tendo 2 jogos (pinball e paciência). 
+            Antes disso, eu tinha um computador com monitor crt, gostava tanto dele, mesmo ele só tendo 2 jogos (pinball e paciência). 
             Certa vez resolvi formatar meu celular, era um Galaxy Pocket. 
-            Me senti super inteligente. No final acabou dando certo, mesmo eu não entendendo muito o que estava fazendo.
+            Me senti super inteligente. No final deu certo, mesmo eu não entendendo muito o que estava fazendo naquele momento.
 
             </p><p>
             Minha mãe sempre falou que a área de TI era a minha cara, ou melhor "perfeito para mim!". Ela estava certa.
