--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
            </figure>
             <p>
               Oi! Meu nome é Larissa, tenho 18 anos e sou apaixonada por tecnologia. 
-              No início de 2020 comecei meus estudos e especialização em tudo que tivesse a ver com tecnologia e etc.
+              No início de 2020 comecei meus estudos e especialização em tudo que tivesse a ver com tecnologia.
                Pretendo seguir carreira na área de engenharia da computação.
 
             </p>
@@ -48,8 +48,8 @@
                
             Minha paixão começou naquela época em que a internet vinha em um pen drive. Eu achava incrível ter que configurar a rede para usar. 
             Antes disso, eu tinha um computador com monitor crt, gostava tanto dele, mesmo ele só tendo 2 jogos (pinball e paciência). 
-            Certa vez resolvi formatar meu celular, era um Galaxy Pocket. 
-            Me senti super inteligente. No final deu certo, mesmo eu não entendendo muito o que estava fazendo naquele momento.
+            Teve uma vez resolvi formatar meu celular, era um Galaxy Pocket. 
+            Me senti super inteligente. E deu certo, mesmo eu não entendendo muito o que estava fazendo naquele momento.
 
             </p><p>
             Minha mãe sempre falou que a área de TI era a minha cara, ou melhor "perfeito para mim!". Ela estava certa.
@@ -195,7 +195,7 @@
               </div>
           </section>
           <footer class="container-fluid text-center bg-footer margin">
-            <p>Desenvolvido por Larissa Ferreira Veríssimo</p>
+            <p>Desenvolvido por Larissa-fv</p>
         </footer>
   </body>
 </html>
