--- a/index.html
+++ b/index.html
@@ -46,10 +46,18 @@
                 
             <p>
                
-            Minha paixão começou naquela época em que a internet vinha em um pen drive. Eu achava incrível ter que configurar a rede para usar. 
-            Antes disso, eu tinha um computador com monitor crt, gostava tanto dele, mesmo ele só tendo 2 jogos (pinball e paciência). 
-            Teve uma vez resolvi formatar meu celular, era um Galaxy Pocket. 
-            Me senti super inteligente. E deu certo, mesmo eu não entendendo muito o que estava fazendo naquele momento.
+             Não sei ao certo quando que me interessei por tecnologia.
+               Sempre cultivei boas experiências desde de criança.
+                Eu me lembro de quando ganhei aqueles Laptops infantis, amava muito ele,
+                eu brincava de ser uma  agente secreta que tinha que mandar mensagens importantes criptografadas, ou que os jogos eram problemas super complexos.
+                Outras experiências foram quando eu já tinha um computador. 
+                Gostava tanto de mexer em tudo nele, só para ver como funcionava a rede (naquela época a internet vinha em um pendrive).
+                Teve uma vez que formatei meu celular, era um Galaxy Pocket, 
+                foi uma experiência incrível pela pouca idade que eu tinha (apesar de ter  visto um vídeo antes). 
+                Me lembro quando ganhei um master system quando criança, fiquei super feliz, até hoje não zerei sonic, mas um dia eu chego lá. 
+                Sempre gostei de mexer em celulares, até nos mais antigos. Eu gostava de ver toda a configuração deles. O tempo passou e isso não mudou! 
+                Continuo indo nas lojas só para ver o android e outras configurações.
+
 
             </p><p>
             Minha mãe sempre falou que a área de TI era a minha cara, ou melhor "perfeito para mim!". Ela estava certa.
