Update index.html 2025 jul

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 <section id="about" class="container py-5">
   <h5 data-aos="fade-right" data-aos-duration="900"> /print("about me")</h5>
   <p data-aos="fade-up" data-aos-duration="900" data-aos-delay="150">
-     Sou graduada em Gestão da Tecnologia da Informação pela Pontifícia Universidade Católica do Paraná (PUCPR), com experiência crescente em ciência de dados, análise estatística e projetos integrados com Internet das Coisas (IoT). Tenho desenvolvido estudos na indústria farmacêutica e em dados públicos usando Python, JupyterLab e ferramentas como Matplotlib, Seaborn e Plotly. Acredito que tecnologia deve ser usada para transformar e melhorar a sociedade.
+     Sou graduada em Gestão da Tecnologia da Informação pela Pontifícia Universidade Católica do Paraná (PUCPR), com experiência crescente em ciência de dados, análise estatística e projetos integrados com Internet das Coisas (IoT). Tenho desenvolvido estudos e em dados públicos usando Python, JupyterLab e ferramentas como Matplotlib, Seaborn e Plotly. Acredito que tecnologia deve ser usada para transformar e melhorar a sociedade.
   </p>
   <p data-aos="fade-up" data-aos-duration="900" data-aos-delay="300">
-     I hold a degree in Information Technology Management from PUCPR and have been developing skills in data science, statistical analysis, and IoT-integrated projects. I have worked on pharmaceutical industry data and public data analysis using Python, JupyterLab, and visualization libraries like Matplotlib, Seaborn, and Plotly. I believe technology should be harnessed to transform and improve society.
+     I hold a degree in Information Technology Management from PUCPR and have been developing skills in data science, statistical analysis, and IoT-integrated projects. I have worked in data and public data analysis using Python, JupyterLab, and visualization libraries like Matplotlib, Seaborn, and Plotly. I believe technology should be harnessed to transform and improve society.
   </p>
 </section>
 
